🔧 chore : 글로벌은 테스트하지 않도록 변경
테스트 코드를 작성하지않았던 exception, response 관련 클래스에 대해서 테스트 커버리지 측정 하지 않도록 변경

--- a/build.gradle
+++ b/build.gradle
@@ -99,7 +99,8 @@ jacocoTestCoverageVerification {
                 minimum = 0.60
             }
             excludes = [
-                    "com.devcourse.checkmoi.CheckmoiApplication"
+                    "com.devcourse.checkmoi.CheckmoiApplication",
+                    "com.devcourse.checkmoi.global.*"
             ]
         }
     }
