🔧 chore : CI/CD 설정 (#20)
* 🔧 chore : CI/CD 설정

Github actions에 다음 설정 추가
	Gradle test가 잘 성공하는 지 체크
	테스트 커버리지(jacoco) 클래스 당 60프로 넘도록 체크
	소나큐브를 이용하여 코드 정적 분석 체크
Github actions CI 완료시 develop 브랜치 -> 개발서버, main 브랜치 -> 운영서버에 배포하는 젠킨스 웹 훅 추가
	배포시 사용하는 이미지 jib을 이용하여 컨테이너화 시키는 구문 추가

* 🔧 chore : 글로벌은 테스트하지 않도록 변경

테스트 코드를 작성하지않았던 exception, response 관련 클래스에 대해서 테스트 커버리지 측정 하지 않도록 변경

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ plugins {
     id 'org.springframework.boot' version '2.7.2'
     id 'io.spring.dependency-management' version '1.0.12.RELEASE'
     id 'org.asciidoctor.convert' version '1.5.8'
+    id 'jacoco'
+    id 'org.sonarqube' version '3.4.0.2513'
+    id 'com.google.cloud.tools.jib' version '3.2.1'
     id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
     id 'java'
 }
@@ -62,14 +65,78 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 }
 
-tasks.named('test') {
-    outputs.dir snippetsDir
-    useJUnitPlatform()
+jacoco {
+    toolVersion = '0.8.8'
 }
 
-tasks.named('asciidoctor') {
-    inputs.dir snippetsDir
+test {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
     dependsOn test
+    reports {
+        xml.required = true
+    }
+    finalizedBy 'jacocoTestCoverageVerification'
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            element = 'CLASS'
+            enabled = true
+
+            limit {
+                counter = 'LINE'
+                value = 'COVEREDRATIO'
+                minimum = 0.60
+            }
+            limit {
+                counter = 'METHOD'
+                value = 'COVEREDRATIO'
+                minimum = 0.60
+            }
+            excludes = [
+                    "com.devcourse.checkmoi.CheckmoiApplication",
+                    "com.devcourse.checkmoi.global.*"
+            ]
+        }
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "prgrms-web-devcourse_Team-Books-CheckMoi-BE"
+        property "sonar.organization", "prgrms-web-devcourse"
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+    }
+}
+
+jib {
+    from {
+        image = "amazoncorretto:17.0.4-al2"
+        platforms {
+            platform {
+                architecture = "arm64"
+                os = "linux"
+            }
+            platform {
+                architecture = "amd64"
+                os = "linux"
+            }
+        }
+    }
+    to {
+        image = "zxcv9203/${project.name}"
+        tags = ["${project.version.toString().toLowerCase()}"]
+    }
+    container {
+        environment = ["PROFILE" : "local"]
+        jvmFlags = ['-Xms512m', '-Dspring.profiles.active=${PROFILE}']
+    }
 }
 //queryDSL
 def querydslDir = "$buildDir/generated/querydsl"
