🔧 chore : swagger를 띄우는  서버에 맞게 서버 이름을 변경하도록 변경

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -30,11 +30,14 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: export SERVER_NAME
+        run: export ${{ secrets.DEV_SERVER_NAME }}
+
+      - name: OpenAPI Spec Create
+        run: ./gradlew test copyDocument
+
       - name: Execute Gradle build and analyze
         run: ./gradlew jib
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: jenkins deploy
         uses: appleboy/jenkins-action@master
