✨ feat : 기본 엔티티 작업 (#27)
* ✨ feat : BaseEntity 및 Auditing 설정

✨ feat : ApiUtil 클래스 제작

* 🔧 chore : queryDsl path test 제외

* ✨ feat : Book 엔티티 추가 및 생성 테스트

* ✨ feat : BookService 인터페이스 및 테스트 정의

- DTO 를 추가한다
- Repository 를 추가한다
- 북서비스에 대한 테스트를 정의한다 이는 내부 구현은 테스트하지 않기 때문에 현재 실패한다

* ✨ feat : 스터디 엔티티 init

* 🐛 fix : 상태코드 불일치 변경 BAD_REQUEST →  NOT_FOUND

✨ feat : STUDY_NOT_FOUND 메시지 추가

* ✨ feat : StudyMember 엔티티 추가

* 🔥 remove : 현재 PR과 부합하지 않는 파일 제거

* 🐛 fix : sonarqube 불필요한 테스트 대상 제거

* 📝 docs : 수정된 CheckMoi 커스텀 코딩컨벤션

변경된 규칙 : 필드 정의할때 항상 엔터 한칸이 필요하다

* 🎨 style : 코드컨벤션에 맞게 정렬

* 📝 docs : PR 템플릿 resolves 추가

* ✨ feat : 스터디 상태 추가

* ♻️ refactor : 엔티티 속성들에 대한 타입 사이즈 변경

Co-authored-by: ynoolee <heerarea129@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -105,7 +105,8 @@ jacocoTestCoverageVerification {
             }
             excludes = [
                     "com.devcourse.checkmoi.CheckmoiApplication",
-                    "com.devcourse.checkmoi.global.*"
+                    "com.devcourse.checkmoi.global.*",
+                    "com.devcourse.checkmoi.domain.*.model.Q*"
             ]
         }
     }
@@ -126,6 +127,13 @@ sonarqube {
         property "sonar.organization", "prgrms-web-devcourse"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+        property "sonar.exclusions",
+                """
+                src/main/java/com/devcourse/checkmoi/global/util/ApiUtil.java, 
+                src/main/java/com/devcourse/checkmoi/global/exception/EntityNotFoundException.java,
+                src/main/java/com/devcourse/checkmoi/global/exception/ErrorMessage.java,
+                src/main/java/com/devcourse/checkmoi/global/model/BaseEntity.java
+                """
     }
 }
 
@@ -155,7 +163,7 @@ jib {
         tags = ["${project.version.toString().toLowerCase()}"]
     }
     container {
-        environment = ["PROFILE" : "local"]
+        environment = ["PROFILE": "local"]
         jvmFlags = ['-Xms512m', '-Dspring.profiles.active=${PROFILE}']
     }
 }
