✨ feat : 스터디 생성 기능 구현
책 + 스터디 정보를 요청을 보내면 스터디를 생성해주는 API 구현 및 해당 API 필요한 기능 구현
API, Service, Converter에 대한 테스트 코드 구현
openapi3에 Oauth2를 인증할 수 있도록 OAuth2 인증방식과 token 서버, 인증 서버 URL 추가

--- a/build.gradle
+++ b/build.gradle
@@ -119,6 +119,11 @@ openapi3 {
     description = 'Checkmoi API 페이지'
     version = project.version.toString().toUpperCase()
     format = 'yaml'
+    oauth2SecuritySchemeDefinition = {
+        flows = ['authorizationCode']
+        tokenUrl = "$System.env.SERVER_NAME/token"
+        authorizationUrl = "$System.env.SERVER_NAME/authorize"
+    }
 }
 
 sonarqube {
