--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 }
 
 group = 'com.devcourse'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = '17'
 
 configurations {
@@ -106,7 +106,11 @@ jacocoTestCoverageVerification {
             excludes = [
                     "com.devcourse.checkmoi.CheckmoiApplication",
                     "com.devcourse.checkmoi.global.*",
-                    "com.devcourse.checkmoi.domain.*.model.Q*"
+                    "com.devcourse.checkmoi.domain.*.model.Q*",
+                    "com.devcourse.checkmoi.domain.*.model.vo.Q*",
+                    "com.devcourse.checkmoi.domain.user.*",
+                    "com.devcourse.checkmoi.domain.token.*"
+
             ]
         }
     }
@@ -121,8 +125,8 @@ openapi3 {
     format = 'yaml'
     oauth2SecuritySchemeDefinition = {
         flows = ['authorizationCode']
-        tokenUrl = "$System.env.SERVER_NAME/token"
-        authorizationUrl = "$System.env.SERVER_NAME/authorize"
+        tokenUrl = "https://kauth.kakao.com/oauth/token"
+        authorizationUrl = "https://kauth.kakao.com/oauth/authorize"
     }
 }
 
@@ -138,12 +142,15 @@ sonarqube {
                 src/main/java/com/devcourse/checkmoi/global/exception/EntityNotFoundException.java,
                 src/main/java/com/devcourse/checkmoi/global/exception/ErrorMessage.java,
                 src/main/java/com/devcourse/checkmoi/global/model/BaseEntity.java
+                src/main/java/com/devcourse/checkmoi/global/security/**,
+                src/main/java/com/devcourse/checkmoi/domain/user/**,
+                src/main/java/com/devcourse/checkmoi/domain/token/**
                 """
     }
 }
 
 task copyDocument(type: Copy) {
-    dependsOn ("openapi3")
+    dependsOn("openapi3")
     from file("$buildDir/api-spec/openapi3.yaml")
     into file("src/main/resources/static/docs/.")
 }
