🐛 fix : 삭제한 파일 복구 및 파일 내용 수정
삭제한 파일 복구 (이슈템플릿, 코드오너)
CI 설정 환경변수 설정과 명령 묶기

--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -30,11 +30,10 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: export SERVER_NAME
-        run: export SERVER_NAME=${{ secrets.PROD_SERVER_NAME }}
-
       - name: OpenAPI Spec Create
-        run: ./gradlew test copyDocument
+        run: |
+          export SERVER_NAME=${{ secrets.PROD_SERVER_NAME }}
+          ./gradlew test copyDocument
 
       - name: Execute Gradle build and analyze
         run: ./gradlew jib
