--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -30,23 +30,17 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: export SERVER_NAME
-        run: export SERVER_NAME=${{ secrets.DEV_SERVER_NAME }}
-
-      - name: export KAKAO_CLIENT_ID
-        run: export KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }}
-
-      - name: export KAKAO_CLIENT_SECRET
-        run: export KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }}
-
-      - name: export JWT_SECRET_KEY
-        run: export JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
-
       - name: OpenAPI Spec Create
-        run: ./gradlew test copyDocument
+        run: |
+          export SERVER_NAME=${{ secrets.DEV_SERVER_NAME }}
+          ./gradlew test copyDocument
 
-      - name: Execute Gradle build and analyze
-        run: ./gradlew jib
+      - name: Execute Gradle build
+        run: |
+          export KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }}
+          export KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }}
+          export JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
+          ./gradlew jib
 
       - name: jenkins deploy
         uses: appleboy/jenkins-action@master
