🐛 fix : 스터디 수정에서 스터디 장을 불러올때 null이 넘어오는 현상 해결
스터디 생성시 생성한 유저의 상태를 PENDING이 아닌 OWNED로 변경

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -40,7 +40,7 @@ jobs:
           export KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }}
           export KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }}
           export JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
-          ./gradlew jib
+          ./gradlew build jib
 
       - name: jenkins deploy
         uses: appleboy/jenkins-action@master
