--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -36,7 +36,7 @@ jobs:
           ./gradlew test copyDocument
 
       - name: Execute Gradle build and analyze
-        run: ./gradlew jib
+        run: ./gradlew build jib
 
       - name: jenkins deploy
         uses: appleboy/jenkins-action@master
