✨ feat : API호출을 로깅한다

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation group: 'org.json', name: 'json', version: '20201115'
 
     // db
     runtimeOnly 'com.h2database:h2'
