♻️ refactor : File 관련 계층 클래스들의 이름에서 Upload 부분 삭제 (#40)
- delete 또한 수행하기에 업로드라는 네임을 붙이는 것은 적절하지 않다는 생각에 수정함. 이 서비스는 파사드로 분리하기에는 너무나 작은 단위이기에 분리하지 않고 이름을 변경하였음

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -40,6 +40,12 @@ jobs:
           export KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }}
           export KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }}
           export JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
+          export S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }}
+          export S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }}
+          export S3_URL=${{ secrets.S3_URL }}
+          export S3_INTEGRATED_BUCKET_NAME=${{ secrets.S3_INTEGRATED_BUCKET_NAME }}
+
+
           ./gradlew build jib
 
       - name: jenkins deploy
