--- a/src/main/resources/application-aws.yml
+++ b/src/main/resources/application-aws.yml
@@ -4,5 +4,5 @@ cloud:
       region: ap-northeast-2
       accessKey: ${S3_ACCESS_KEY}
       secretKey: ${S3_SECRET_KEY}
-      url: https://s3.ap-northeast-2.amazonaws.com
-      bucketName: devcourse-r-checkmoi-bucket
+      url: ${{S3_URL}
+      bucketName: ${S3_INTEGRATED_BUCKET_NAME}
