--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -44,3 +44,11 @@ jwt:
     expire-length: 3600000
   refresh-token:
     expire-length: 3600000
+cloud:
+  aws:
+    s3:
+      region: ap-northeast-2
+      accessKey: ${S3_ACCESS_KEY}
+      secretKey: ${S3_SECRET_KEY}
+      url: ${S3_URL}
+      bucketName: ${S3_INTEGRATED_BUCKET_NAME}
