🐛 fix : 환경변수 설정을 추가한다 (#83)
- 환경변수가 추가되어있지 않았던 문제를 해결함

--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -33,10 +33,20 @@ jobs:
       - name: OpenAPI Spec Create
         run: |
           export SERVER_NAME=${{ secrets.PROD_SERVER_NAME }}
+          export S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }}
+          export S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }}
+          export S3_URL=${{ secrets.S3_URL }}
+          export S3_INTEGRATED_BUCKET_NAME=${{ secrets.S3_INTEGRATED_BUCKET_NAME }}
           ./gradlew test copyDocument
 
       - name: Execute Gradle build and analyze
-        run: ./gradlew build jib
+        run: |
+          export S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }}
+          export S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }}
+          export S3_URL=${{ secrets.S3_URL }}
+          export S3_INTEGRATED_BUCKET_NAME=${{ secrets.S3_INTEGRATED_BUCKET_NAME }}
+          ./gradlew build jib
+
 
       - name: jenkins deploy
         uses: appleboy/jenkins-action@master
