--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -33,6 +33,10 @@ jobs:
       - name: OpenAPI Spec Create
         run: |
           export SERVER_NAME=${{ secrets.DEV_SERVER_NAME }}
+          export S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }}
+          export S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }}
+          export S3_URL=${{ secrets.S3_URL }}
+          export S3_INTEGRATED_BUCKET_NAME=${{ secrets.S3_INTEGRATED_BUCKET_NAME }}
           ./gradlew test copyDocument
 
       - name: Execute Gradle build
