--- a/src/main/resources/application-aws.yml
+++ b/src/main/resources/application-aws.yml
@@ -4,5 +4,5 @@ cloud:
       region: ap-northeast-2
       accessKey: ${S3_ACCESS_KEY}
       secretKey: ${S3_SECRET_KEY}
-      url: ${{S3_URL}
+      url: ${S3_URL}
       bucketName: ${S3_INTEGRATED_BUCKET_NAME}
