--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,7 +14,10 @@ spring:
         format_sql: true
         query.in_clause_parameter_padding: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
   security:
     oauth2:
       client:
