🧪 test : 허용 자원 추가

--- a/src/main/resources/application-security.yml
+++ b/src/main/resources/application-security.yml
@@ -51,6 +51,8 @@ security:
       GET:
         - /docs/**
         - /api/tokens/**
+        - /api/books/**
+        - /api/studies
       POST: [ ]
       PATCH: [ ]
       PUT: [ ]
