🔧 chore : studies 도메인 시큐리티 허용범위 수정

--- a/src/main/resources/application-security.yml
+++ b/src/main/resources/application-security.yml
@@ -56,7 +56,7 @@ security:
       GET:
         - /api/tokens/**
         - /api/books/**
-        - /api/studies
+        - /api/studies/**
       POST: [ ]
       PATCH: [ ]
       PUT: [ ]
