⏪️ revert : "🔧 chore : flyway 기능 적용 (#141)"
This reverts commit 9f6fa702256ca8e16ac18e65350d572ef50a26bf.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,10 +14,7 @@ spring:
         format_sql: true
         query.in_clause_parameter_padding: true
     hibernate:
-      ddl-auto: validate
-  flyway:
-    enabled: true
-    baseline-on-migrate: true
+      ddl-auto: update
   security:
     oauth2:
       client:
