--- a/build.gradle
+++ b/build.gradle
@@ -147,6 +147,8 @@ sonarqube {
         property "sonar.exclusions",
                 """
                 src/main/java/com/devcourse/checkmoi/global/**
+                src/main/java/com/devcourse/checkmoi/domain/user/api/AuthApi.java
+                src/main/java/com/devcourse/checkmoi/domain/token/**
                 """
     }
 }
