♻️ refactor : study 리스트 조회에 대해서 페이징 적용 (#161)
* ♻️ refactor : study 리스트 조회에 대해서 페이징 적용

totalPage의 필요성때문에 study 리스트 조회시 페이지네이션을 적용하도록 수정

* ♻️ refactor : study 조건 조회 페이지네이션 적용

* 📝 docs : 페이지 관련 API 문서화 추가

--- a/build.gradle
+++ b/build.gradle
@@ -148,7 +148,7 @@ sonarqube {
                 """
                 src/main/java/com/devcourse/checkmoi/global/**,
                 src/main/java/com/devcourse/checkmoi/domain/user/api/AuthApi.java,
-                src/main/java/com/devcourse/checkmoi/domain/token/**,
+                src/main/java/com/devcourse/checkmoi/domain/token/**
                 """
     }
 }
