♻️ refactor : 스터디 검색 조건 수정 (#177)
* ✨ feat : 스터디 장도 참여하고 있는 스터디에 출력한다

* 🧪 test : 추가한 검색 조건을 테스트 한다

* 🐛 fix : 테스트가 실패한 부분을 수정한다

* 🐛 fix : 객체 비교 equals로 수정

* 🐛 fix : 객체 비교 equals로 수정2 !equals

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,8 +3,8 @@ name: project ci
 on:
   pull_request:
     branches:
-      - "develop"
-      - "main"
+      - "develop**"
+      - "main**"
 jobs:
   build:
     runs-on: ubuntu-latest
