🔧 chore : 스케줄링 풀 사이즈 설정 (#97)
- 비동기적이며 논블로킹으로 수행이 가능하도록 하기 위해 스레드 풀 사이즈를 2개로 설정한다

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
     console:
       enabled: true
       path: /h2-console
-
+  task:
+    scheduling:
+      pool:
+        size: 2
 front-url:
   http://localhost:8080
