--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       aws
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb;
+    url: jdbc:h2:mem:testdb;MODE=MYSQL
     username: sa
   h2:
     console:
@@ -18,3 +18,5 @@ spring:
         size: 2
 front-url:
   http://localhost:8080
+
+order_by_field_list: decode
