🔧 chore : v2 시큐리티 GET 메소드 권한 수정

--- a/src/main/resources/application-security.yml
+++ b/src/main/resources/application-security.yml
@@ -56,8 +56,8 @@ security:
         - /docs/**
       GET:
         - /api/tokens/**
-        - /api/books/**
-        - /api/studies/**
+        - /api/**/books/**
+        - /api/**/studies/**
         - /login
       POST: [ ]
       PATCH: [ ]
