--- a/src/main/resources/application-security.yml
+++ b/src/main/resources/application-security.yml
@@ -22,9 +22,9 @@ jwt:
   issuer: checkMoi
   secret-key: ${JWT_SECRET_KEY}
   access-token:
-    expire-length: 3600000 # 3600000
+    expire-length: 3_600_000 # 1시간
   refresh-token:
-    expire-length: 7200000
+    expire-length: 7_300_000 # 2시간 + a
 
 cors:
   allowed:
