--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,7 @@ jacocoTestCoverageVerification {
                     "com.devcourse.checkmoi.domain.*.model.vo.Q*",
                     "com.devcourse.checkmoi.domain.token.*",
                     "com.devcourse.checkmoi.domain.user.*",
+                    "com.devcourse.checkmoi.domain.study.api.Schedule*",
                     "com.devcourse.checkmoi.global.*",
             ]
         }
@@ -148,6 +149,7 @@ sonarqube {
                 """
                 src/main/java/com/devcourse/checkmoi/global/**,
                 src/main/java/com/devcourse/checkmoi/domain/user/api/AuthApi.java,
+                src/main/java/com/devcourse/checkmoi/domain/study/api/ScheduleApi.java,
                 src/main/java/com/devcourse/checkmoi/domain/token/**
                 """
     }
